[gd_scene load_steps=7 format=3 uid="uid://ca1s32ibdamr5"]

[ext_resource type="Script" path="res://Scenes/add_new_course_details.gd" id="1_2a2ab"]
[ext_resource type="StyleBox" uid="uid://vpm6jgp1max0" path="res://Scenes/white_panel.tres" id="2_v81cu"]
[ext_resource type="StyleBox" uid="uid://xuerbuit124m" path="res://Scenes/text_edit_normal.tres" id="3_5cc33"]
[ext_resource type="Theme" uid="uid://dg4gmo66qxarx" path="res://Scenes/Course_Card.tres" id="4_hwgp0"]

[sub_resource type="Theme" id="Theme_6ueds"]
MarginContainer/colors/Background = Color(0.988235, 0.870588, 0.454902, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_khs86"]

[node name="add_new_course_details" type="Button"]
custom_minimum_size = Vector2(320, 280)
offset_right = 300.0
offset_bottom = 280.0
theme = SubResource("Theme_6ueds")
theme_override_styles/normal = SubResource("StyleBoxEmpty_khs86")
flat = true
script = ExtResource("1_2a2ab")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_v81cu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="course_title" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_5cc33")
placeholder_text = "Course Title
"

[node name="course_description" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_5cc33")
placeholder_text = "What's this course about"

[node name="target_date" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_5cc33")
placeholder_text = "Till when you are targetting to complete it"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Done_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_hwgp0")
text = "Done"

[node name="Cancel_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_hwgp0")
theme_override_styles/normal = ExtResource("2_v81cu")
text = "Cancel
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Done_button" to="." method="_on_done_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel_button" to="." method="_on_cancel_button_pressed"]
